# Silice

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  FirstDesign.md  GetStarted.md  GetStarted_Linux.md  GetStarted_Windows.md  GetStarted_YoWASP.md  GetStarted_Yowasp.md  GetStarted_macOS.md  LICENSE.md  LICENSE_MIT  README.md  TROUBLESHOOTING.md  compile_silice_linux.sh  compile_silice_mingw32.sh  compile_silice_mingw64.sh  compile_silicehe_linux.sh  compile_silicehe_mingw32.sh  compile_silicehe_mingw64.sh  compile_verilator_framework_linux.sh  compile_verilator_framework_macos.sh  compile_verilator_framework_mingw32.sh  compile_verilator_framework_mingw64.sh  get_started_linux.sh  get_started_mingw64.sh  get_started_yowasp.sh  install_dependencies_archlinux.sh  install_dependencies_debian_like.sh  install_dependencies_fedora.sh  install_dependencies_linux.sh
antlr/: antlr.bat  antlr.sh  compile.bat  compile.sh  grun.bat  grun.sh  jvc.bat  jvc.sh  lpp.g4  silice.g4  test1.ice  test1.l  test1.si  test1.v  testi.bat  testl.bat  testv.bat  vmodule.g4
docs/: silice.tex
frameworks/: de10nano_basic.v  de10nano_sdram_vga.v  fomu.v  icarus.v  icarus_bare.v  icarus_oled.v  icarus_oled_ulx3s.v  icarus_vga.v  icebreaker.v  icebreaker_vga.v  icestick.v  icestick_oled.v  icestick_vga.v  icestick_vga_64gray.v  icestick_vga_64rgb.v  mojo_basic.ucf  mojo_basic.v  mojo_led.v  mojo_led_panel.v  mojo_sdram_hdmi.ucf  mojo_sdram_hdmi.v  mojo_sdram_vga.ucf  mojo_sdram_vga.v  simul.v  (+6 more)
frameworks/verilator/: CMakeLists.txt  PWMAudio.cpp  PWMAudio.h  ParallelScreen.cpp  ParallelScreen.h  README.md  SPIScreen.cpp  SPIScreen.h  VgaChip.cpp  VgaChip.h  display.cpp  display.h  sdr_sdram.cpp  sdr_sdram.h  verilator_bare.cpp  verilator_callbacks.h  verilator_data.cpp  verilator_data.h  verilator_main.cpp  verilator_sdram.cpp  verilator_spiscreen.cpp  verilator_vga.cpp  verilator_vga_sdram.cpp  vga_display.cpp  vga_display.h  vga_loop.cpp  video_out.cpp  video_out.h
python/: CMakeLists.txt  README.md  icebreaker_blinky.py  pysilice.cpp  setup.py
python/silice/: __init__.py  migen.py  silice.py
python/silice/migen/: migen.py
python/tests/: icebreaker_blinky.py  lambdaconcept_ecpix5.py
src/libs/lua/: CMakeLists.txt
src/libs/lua/src/: lauxlib.c  ldo.c  loslib.c  luaconf.h  lvm.c
src/libs/luabind-deboostified/: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/libs/luabind-deboostified/doc/: CMakeLists.txt  changes.txt  docs.rst  version.rst.in
src/libs/luabind-deboostified/luabind/: adopt_policy.hpp  back_reference.hpp  class.hpp  class_info.hpp  config.hpp  container_policy.hpp  copy_policy.hpp  dependency_policy.hpp  discard_result_policy.hpp  error.hpp  error_callback_fun.hpp  exception_handler.hpp  from_stack.hpp  function.hpp  get_main_thread.hpp  handle.hpp  iterator_policy.hpp  lua_argument_proxy.hpp  lua_index_proxy.hpp  lua_iterator_proxy.hpp  lua_proxy.hpp  lua_proxy_interface.hpp  make_function.hpp  no_dependency.hpp  operator.hpp  out_value_policy.hpp  pointer_traits.hpp  raw_policy.hpp  return_reference_to_policy.hpp  scope.hpp  set_package_preload.hpp  shared_ptr_converter.hpp  tag_function.hpp  typeid.hpp  wrapper_base.hpp  yield_policy.hpp
src/libs/luabind-deboostified/luabind/detail/: call.hpp  call_function.hpp  call_member.hpp  call_shared.hpp  call_traits.hpp  class_rep.hpp  constructor.hpp  conversion_storage.hpp  convert_to_lua.hpp  crtp_iterator.hpp  debug.hpp  decorate_type.hpp  deduce_signature.hpp  enum_maker.hpp  format_signature.hpp  garbage_collector.hpp  inheritance.hpp  instance_holder.hpp  link_compatibility.hpp  make_instance.hpp  meta.hpp  most_derived.hpp  object.hpp  object_rep.hpp  operator_id.hpp  other.hpp  pcall.hpp  pointee_sizeof.hpp  policy.hpp  primitives.hpp  signature_match.hpp  typetraits.hpp
src/libs/luabind-deboostified/luabind/detail/conversion_policies/: conversion_base.hpp  conversion_policies.hpp  enum_converter.hpp  function_converter.hpp  lua_proxy_converter.hpp  native_converter.hpp  pointer_converter.hpp  reference_converter.hpp  value_converter.hpp
src/libs/luabind-deboostified/src/: CMakeLists.txt  class.cpp  class_info.cpp  class_rep.cpp  error.cpp  exception_handler.cpp  function.cpp  function_introspection.cpp  inheritance.cpp  object_rep.cpp  open.cpp  pcall.cpp  scope.cpp  set_package_preload.cpp  wrapper_base.cpp
src/libs/luabind-deboostified/test/: CMakeLists.txt  benchmark.cpp  main.cpp  test.hpp  test_abstract_base.cpp  test_adopt.cpp  test_adopt_wrapper.cpp  test_attributes.cpp  test_automatic_smart_ptr.cpp  test_back_reference.cpp  test_builtin_converters.cpp  test_class_info.cpp  test_collapse_converter.cpp  test_construction.cpp  test_create_in_thread.cpp  test_dynamic_type.cpp  test_exception_handlers.cpp  test_extend_class_in_lua.cpp  test_free_functions.cpp  test_function_introspection.cpp  test_headercompile.cpp.in  test_held_type.cpp  test_implicit_cast.cpp  test_implicit_raw.cpp  test_iterator.cpp  test_lua_classes.cpp  test_lua_proxy.cpp  test_null_pointer.cpp  test_object.cpp  test_object_identity.cpp  test_operators.cpp  test_package_preload.cpp  test_policies.cpp  test_private_destructors.cpp  test_properties.cpp  test_scope.cpp  test_set_instance_value.cpp  test_shadow.cpp  test_shared_ptr.cpp  test_smart_ptr_attributes.cpp  (+9 more)
tools/silice_hardware_emulator/: CMakeLists.txt
tools/silice_hardware_emulator/libs/fstapi/: CMakeLists.txt  fstapi.c  fstapi.h
tools/silice_hardware_emulator/libs/verilog-vcd-parser/: .codedocs  .doxygen  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
tools/silice_hardware_emulator/libs/verilog-vcd-parser/src/: VCDFile.cpp  VCDFile.hpp  VCDFileParser.cpp  VCDFileParser.hpp  VCDParser.cpp  VCDParser.hpp  VCDParser.ypp  VCDScanner.cpp  VCDScanner.hpp  VCDScanner.l  VCDStandalone.cpp  VCDTypes.hpp  VCDValue.cpp  VCDValue.hpp  location.hh  position.hh  stack.hh
tools/silice_hardware_emulator/src/: VCDParser.cpp  VCDParser.h  VgaChip.cpp  VgaChip.h  main.cpp  video_out.cpp  video_out.h
tools/stl2raw/: CMakeLists.txt  stl2raw.cpp
(+2117 files in other folders)
